# static-pointers-examples

toych/: LICENSE  toych.cabal
toych/src/Control/Distributed/: Process.hs
