name:                toych
version:             0.1.0.0
synopsis:            Toy model of Cloud Haskell.
homepage:            https://github.com/tweag/static-pointers-examples
license:             BSD3
license-file:        LICENSE
maintainer:          Mathieu Boespflug <m@tweag.io>
copyright:           © 2014, Tweag I/O Limited
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Control.Distributed.Process
  build-depends:       base >=4.7 && <5
                     , binary >= 0.5
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , mtl >=2.1
                     , network-transport >= 0.3
                     , transformers >=0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
